--- a/org-mode-conf.org
+++ b/org-mode-conf.org
@@ -30,9 +30,9 @@ Including font lock and directories
 
 #+begin_src emacs-lisp
   (setq org-directory "~/Documents/org")
-  (setq org-mobile-directory "~/Dropbox/Apps/MobileOrg")
+  (setq org-mobile-directory "/scp:nginx@cloud.defunct.ch:/var/www/org-mobile/")
   (setq org-agenda-files (quote ("~/Documents/org/" "~/Documents/org/priv"
-                                 "~/Documents/org/work" "~/Documents/org/foss")))
+                                 "~/Documents/org/work")))
   (setq org-mobile-inbox-for-pull "~/Documents/org/inbox.org")
   (setq org-default-notes-file (concat org-directory "/inbox.org"))
 
