--- a/org-mode-conf.org
+++ b/org-mode-conf.org
@@ -7,14 +7,19 @@
 ** Load dependencies
 
 #+begin_src emacs-lisp
-  (require 'org-loaddefs)
-  (require 'org-agenda)
-  (require 'org-protocol)
+  (use-package org
+      :ensure org-plus-contrib
+      :defer t
+      :commands org-mode
+      :config (progn
+                (require 'org-loaddefs)
+                (require 'org-agenda)
+                (require 'org-protocol)
 
-  ;; Explicitly load required exporters
-  (require 'ox-html)
-  (require 'ox-latex)
-  (require 'ox-ascii)
+                ;; Explicitly load required exporters
+                (require 'ox-html)
+                (require 'ox-latex)
+                (require 'ox-ascii)))
 #+end_src
 
 
