--- a/org-mode-conf.org
+++ b/org-mode-conf.org
@@ -18,8 +18,10 @@ Including font lock and directories
 #+begin_src emacs-lisp
   (setq org-directory "~/Documents/org")
   (setq org-mobile-directory "/scp:nginx@cloud.defunct.ch:/var/www/org-mobile/")
-  (setq org-agenda-files (quote ("~/Documents/org/" "~/Documents/org/priv"
-                                 "~/Documents/org/work")))
+  (setq org-agenda-files (quote ("~/Documents/org/inbox.org"
+                                 "~/Documents/org/foss-projects.org"
+                                 "~/Documents/org/priv/todo.org"
+                                 "~/Documents/org/work/termitel.org")))
   (setq org-mobile-inbox-for-pull "~/Documents/org/inbox.org")
   (setq org-default-notes-file (concat org-directory "/inbox.org"))
 
@@ -88,58 +90,58 @@ Including font lock and directories
 ** Effort calculation / clock setup
 
 #+begin_src emacs-lisp
-  ; Set default column view headings: Task Effort Clock_Summary
-  (setq org-columns-default-format "%80ITEM(Task) %10Effort(Effort){:} %10CLOCKSUM")
-  ; global Effort estimate values
-  ; global STYLE property values for completion
-  (setq org-global-properties (quote (("Effort_ALL" . "0:15 0:30 0:45 1:00 2:00 3:00 4:00 5:00 6:00 0:00")
-                                      ("STYLE_ALL" . "habit"))))
+  ;; ; Set default column view headings: Task Effort Clock_Summary
+  ;; (setq org-columns-default-format "%80ITEM(Task) %10Effort(Effort){:} %10CLOCKSUM")
+  ;; ; global Effort estimate values
+  ;; ; global STYLE property values for completion
+  ;; (setq org-global-properties (quote (("Effort_ALL" . "0:15 0:30 0:45 1:00 2:00 3:00 4:00 5:00 6:00 0:00")
+  ;;                                     ("STYLE_ALL" . "habit"))))
 
-  ;; Remove empty LOGBOOK drawers on clock out
-  (defun bh/remove-empty-drawer-on-clock-out ()
-    (interactive)
-    (save-excursion
-      (beginning-of-line 0)
-      (org-remove-empty-drawer-at (point))))
+  ;; ;; Remove empty LOGBOOK drawers on clock out
+  ;; (defun bh/remove-empty-drawer-on-clock-out ()
+  ;;   (interactive)
+  ;;   (save-excursion
+  ;;     (beginning-of-line 0)
+  ;;     (org-remove-empty-drawer-at (point))))
 
-  (add-hook 'org-clock-out-hook 'bh/remove-empty-drawer-on-clock-out 'append)
+  ;; (add-hook 'org-clock-out-hook 'bh/remove-empty-drawer-on-clock-out 'append)
 
-  ;;;;;;;;;;;;;;;;;
-  ;; clock setup ;;
-  ;;;;;;;;;;;;;;;;;
+  ;; ;;;;;;;;;;;;;;;;;
+  ;; ;; clock setup ;;
+  ;; ;;;;;;;;;;;;;;;;;
 
-  ;;
-  ;; Resume clocking task when emacs is restarted
-  (org-clock-persistence-insinuate)
-  ;;
-  ;; Show lot of clocking history so it's easy to pick items off the C-F11 list
-  (setq org-clock-history-length 23)
-  ;; Resume clocking task on clock-in if the clock is open
-  (setq org-clock-in-resume t)
-  ;; Change tasks to NEXT when clocking in
-  (setq org-clock-in-switch-to-state 'bh/clock-in-to-next)
-  ;; Separate drawers for clocking and logs
-  (setq org-drawers (quote ("PROPERTIES" "LOGBOOK")))
-  ;; Save clock data and state changes and notes in the LOGBOOK drawer
-  (setq org-clock-into-drawer t)
-  ;; Sometimes I change tasks I'm clocking quickly - this removes clocked tasks with 0:00 duration
-  (setq org-clock-out-remove-zero-time-clocks t)
-  ;; Clock out when moving task to a done state
-  (setq org-clock-out-when-done t)
-  ;; Save the running clock and all clock history when exiting Emacs, load it on startup
-  (setq org-clock-persist t)
-  ;; Do not prompt to resume an active clock
-  (setq org-clock-persist-query-resume nil)
-  ;; Enable auto clock resolution for finding open clocks
-  (setq org-clock-auto-clock-resolution (quote when-no-clock-is-running))
-  ;; Include current clocking task in clock reports
-  (setq org-clock-report-include-clocking-task t)
+  ;; ;;
+  ;; ;; Resume clocking task when emacs is restarted
+  ;; (org-clock-persistence-insinuate)
+  ;; ;;
+  ;; ;; Show lot of clocking history so it's easy to pick items off the C-F11 list
+  ;; (setq org-clock-history-length 23)
+  ;; ;; Resume clocking task on clock-in if the clock is open
+  ;; (setq org-clock-in-resume t)
+  ;; ;; Change tasks to NEXT when clocking in
+  ;; (setq org-clock-in-switch-to-state 'bh/clock-in-to-next)
+  ;; ;; Separate drawers for clocking and logs
+  ;; (setq org-drawers (quote ("PROPERTIES" "LOGBOOK")))
+  ;; ;; Save clock data and state changes and notes in the LOGBOOK drawer
+  ;; (setq org-clock-into-drawer t)
+  ;; ;; Sometimes I change tasks I'm clocking quickly - this removes clocked tasks with 0:00 duration
+  ;; (setq org-clock-out-remove-zero-time-clocks t)
+  ;; ;; Clock out when moving task to a done state
+  ;; (setq org-clock-out-when-done t)
+  ;; ;; Save the running clock and all clock history when exiting Emacs, load it on startup
+  ;; (setq org-clock-persist t)
+  ;; ;; Do not prompt to resume an active clock
+  ;; (setq org-clock-persist-query-resume nil)
+  ;; ;; Enable auto clock resolution for finding open clocks
+  ;; (setq org-clock-auto-clock-resolution (quote when-no-clock-is-running))
+  ;; ;; Include current clocking task in clock reports
+  ;; (setq org-clock-report-include-clocking-task t)
 
-  (setq bh/keep-clock-running nil)
+  ;; (setq bh/keep-clock-running nil)
 
-  (defvar bh/organization-task-id "9a1ade75-b3d0-43aa-b492-90f468182345")
+  ;; (defvar bh/organization-task-id "9a1ade75-b3d0-43aa-b492-90f468182345")
 
-  (add-hook 'org-clock-out-hook 'bh/clock-out-maybe 'append)
+  ;; (add-hook 'org-clock-out-hook 'bh/clock-out-maybe 'append)
 #+end_src
 
 ** Export configuration
@@ -196,12 +198,12 @@ Including font lock and directories
 ** Refiling setup
 
 #+begin_src emacs-lisp
-    (setq org-refile-targets (quote ((nil :maxlevel . 9)
-                                     (org-agenda-files :maxlevel . 9))))
-    (setq org-refile-use-outline-path t)
-    (setq org-outline-path-complete-in-steps nil)
-    (setq org-refile-allow-creating-parent-nodes (quote confirm))
-    ;(setq org-completion-use-ido t)
+  (setq org-refile-targets (quote ((nil :maxlevel . 2)
+                                   (org-agenda-files :maxlevel . 2))))
+  (setq org-refile-use-outline-path t)
+  (setq org-outline-path-complete-in-steps nil)
+  (setq org-refile-allow-creating-parent-nodes (quote confirm))
+  ;(setq org-completion-use-ido t)
 #+end_src
 
 ** Helpers
@@ -582,6 +584,19 @@ idle for 2 minutes
         (insert (concat "[[elisp:(org-tags-view nil \"" tag "\")][" tag  "]]\n"))))
     (beginning-of-buffer)
     (switch-to-buffer "*org-tags*"))
+#+end_src
+
+** custom agendas
+
+#+begin_src emacs-lisp
+  (setq org-agenda-custom-commands
+        '(("w" "Work todos" tags-todo ":work:termitel:"
+           ((org-agenda-overriding-header "Work todos")))
+          ("f" "FLOSS" tags-todo ":private:foss:"
+           ((org-agenda-overriding-header "FLOSS")))
+          ("t" "Priv-TODOs" tags-todo ":private:todo:"
+           ((org-agenda-overriding-header "Priv-TODOs")))))
+
 #+end_src
 
 ** A hydra for global key bindings regarding org
