--- a/emacs.org
+++ b/emacs.org
@@ -827,9 +827,21 @@ We want to be able to edit CMake files in a sane way.
     :init (add-hook 'after-init-hook #'global-flycheck-mode)
     :config (progn
               (setq flycheck-check-syntax-automatically '(mode-enabled new-line save))
-              (setq flycheck-jshintrc "~/.emacs.d/jshint.json")
-              (setq flycheck-disabled-checkers '(emacs-lisp emacs-lisp-checkdoc))
-              (setq-default flycheck-disabled-checkers '(emacs-lisp emacs-lisp-checkdoc))))
+              (setq flycheck-disabled-checkers '(emacs-lisp emacs-lisp-checkdoc javascript-jshint))
+              (setq-default flycheck-disabled-checkers '(emacs-lisp emacs-lisp-checkdoc javascript-jshint))
+
+              (defun my/use-eslint-from-node-modules ()
+                (let* ((root (locate-dominating-file
+                              (or (buffer-file-name) default-directory)
+                              "node_modules"))
+                       (eslint (and root
+                                    (expand-file-name "node_modules/eslint/bin/eslint.js"
+                                                      root))))
+
+                  (when (and eslint (file-executable-p eslint))
+                    (setq-local flycheck-javascript-eslint-executable eslint))))
+
+              (add-hook 'flycheck-mode-hook #'my/use-eslint-from-node-modules)))
 #+end_src
 
 ** flyspell
